pseudo directory system
Former-commit-id: d697f1d27e2451c2331a59055c9d1138ec9a1aca [formerly 7f3695f3c3967f98f8dbfe53752f4d817dc5f3ce]
Former-commit-id: 5fd126057618560f50316fd32be6c5e6ccf0c2d3

--- a/learn.html
+++ b/learn.html
@@ -23,7 +23,7 @@ of the Moon."
 	<section class="calc" id="tryit">
 		<div class="outerDiv" id="PelletSim">
 			<div class="calcDiv">
-				<a href="tools/pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400" alt="Pellet simulator"></a>
+				<a href="pelletSimulator.html"><img src="img/pelletSimulatorLink.png" width="400" alt="Pellet simulator"></a>
 			</div>
 		</div>
 		<div class="outerDiv">
@@ -55,12 +55,12 @@ of the Moon."
 			<div class="calcDiv">
 				<h2>Misc tools</h2>
 				<ul>
-					<li><a href="tools/teth.html">Tether Tool</a></li>
-					<li><a href="tools/starplotter.html">Starplotter</a></li>
-					<li><a href="tools/pelletSimulator.html">Pellet Simulator</a></li>
-					<li><a href="tools/engineSearch.html">Engine Search</a></li>
-					<li><a href="tools/gravityTurn.html">Gravity Turn [bad UI]</a></li>
-					<li><a href="tools/planets.html">Transfer Calculator [in "progress"]</a></li>
+					<li><a href="teth.html">Tether Tool</a></li>
+					<li><a href="starplotter.html">Starplotter</a></li>
+					<li><a href="pelletSimulator.html">Pellet Simulator</a></li>
+					<li><a href="engineSearch.html">Engine Search</a></li>
+					<li><a href="gravityTurn.html">Gravity Turn [bad UI]</a></li>
+					<li><a href="planets.html">Transfer Calculator [in "progress"]</a></li>
 				</ul>
 			</div>
 		</div>
@@ -241,7 +241,7 @@ of the Moon."
 	<div class="outerDiv">
 		<div class="innerDiv">
 			<a href="http://www.gnu.org/licenses/">
-				<p>All calculator scripts are released under the GPL version 3</p>
+				<p>All calculator scripts are released under GPLv3</p>
 			</a>
 		</div>
 	</div>
