--- a/tools/starplotter.html
+++ b/tools/starplotter.html
@@ -6,7 +6,7 @@ title: Starplotter
 <h5>Controls:</h5>
 <p>Movement: W,A,S,D<br>Zoom: Q,E<br>Number of objects: +,-</p>
 <canvas id="plot" width="1000" height="800"></canvas>
-<script src="../js/stars.js"></script>
+<script src="js/stars.js"></script>
 <script>
 String.prototype.hashCode = function() {
   var hash = 0, i, chr;
