--- a/contribute.html
+++ b/contribute.html
@@ -18,18 +18,17 @@ of the Moon."
 					You want to contribute to our project? Awesome! Here is a quick guide on how to do that.
 				</p>
 				<p>
-					<h4>Content:</h4>
+					<p>Content:</p>
 					<ul style="list-style-type:none;"><!--This should be a class by the way-->
 						<li><a href="#">Contact us</a></li>
 						<ul style="list-style-type:none;">
-							<li><a href="#">Chat</a></li>
-							<li><a href="#">Email</a></li>
-							<li><a href="#">Forum</a></li>
+							<li><a href="https://chat.stackexchange.com/rooms/37071/moonwards">Chat</a></li>
+							<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
 						</ul>
 						<li><a href="#">Contribute as a developer</a></li>
 						<ul style="list-style-type:none;">
-							<li><a href="#">Technologies</a></li>
-							<li><a href="#">Build system</a></li>
+							<li><a href="#technologies">Technologies</a></li>
+							<li><a href="#build">Build system</a></li>
 							<ul style="list-style-type:none;">
 								<li><a href="#">Requirements</a></li>
 								<li><a href="#">Build process</a></li>
@@ -37,6 +36,15 @@ of the Moon."
 							</ul>
 						</ul>
 					</ul>
+				</p>
+				<h3 id="technologies">Technologies</h3>
+				<p>
+					(list for now, description later) HTML5,Javascript,CSS3. Little framework dependancy.
+				</p>
+				<h3 id="build">Build System</h3>
+				<p>
+					Git repo, with a joint jekyll/makefile build process. CSS is compiled from SASS.<br>
+					At a minimum, you would need jekyll, a sass compiler and bash to build a copy of the site. Some less important script may require python.
 				</p>
 			</article>
 		</div>
