--- a/index.html
+++ b/index.html
@@ -25,26 +25,7 @@ of the Moon."
 				</li>
 			</ul>
 			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
-				<section class="container">
-					<p>All blog posts linked below:</p>
-					<div id="blogPostDiv" style="display:inline;height:600px;overflow-y:scroll;margin-right:50px;">
-						<ul>
-						{% for post in site.posts %}
-							{% if forloop.index <= 5 %}
-							<li>
-								<h1><a href="{{post.url | remove_first: "/" }}">{{post.title}}</a></h1>
-								<h3>{{ post.excerpt | strip_html}}</h3>
-							</li>
-							{% else %}
-							<li>
-								<h2><a href="{{post.url | remove_first: "/" }}">{{post.title}}</a></h2>
-								<h3>{{ post.content | truncatewords: 50 | strip_html}}</h3>
-							</li>
-							{% endif%}
-						{% endfor %}
-						</ul>
-					</div>
-				</section>
+				<iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
 			</article>
 			<article class="innerDiv under-tabs tabcontent" id="intro">
 				<h1>Realistic Lunar Colony, Coming Online</h1>
