MIP images, correction in colonies, new timeline2 page for revision
Former-commit-id: 6e68f1bf783c883c9c701dc257a3ad12113db390 [formerly d84875f21c03b3dd3a62f24079c9f7b81bdf022a]
Former-commit-id: 28b610b4e388e81c61499d929bf393b940a82385

--- a/colonies.html
+++ b/colonies.html
@@ -22,13 +22,9 @@ intro: "To settle the Moon you have to find the right place, set up the right tr
 				</div>
 				<div class="tooltip_templates">
 					<span id="noteLal1">
-						I wrongly have said Lalande is a Copernican crater (meaning
-      it was created after Copernicus Crater, which may be as young
-      as 100 million years old)
-						because of its bright ray system and sharp features. In fact
-						according to the standard crater-counting dating method it is
+						According to the standard crater-counting dating method Lalande is
       about 2.8 billion years old.
-						That still makes it younger than 99% of craters. More on this
+						That makes it younger than 99% of craters. More on this
 						on the Lalande page.
 					</span>
 				</div>
