post layout updates - not working
Former-commit-id: cf5bad01dd926a9d856f5ff1ef88e55be6b8e87d [formerly 10c351dc02ca042a362c506e5e951f83577424c6]
Former-commit-id: 737151559a901cbd2e20c9d97ed40c64f3f0ee1d

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ of the Moon."
 					onclick="openContent(event, 'intro')">Introduction</a>
 				</li>
 			</ul>
-			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
+			<article class="under-tabs tabcontent" id="blog">
 				<section  class="goodHeight">
 			     <p>All blog posts linked below:</p>
 			  <ul class="blog">
