fresh start with blog post changes
Former-commit-id: 61ba4a3add6dbefcd28543e0002550b44206b581

--- a/index.html
+++ b/index.html
@@ -24,25 +24,8 @@ of the Moon."
 					onclick="openContent(event, 'intro')">Introduction</a>
 				</li>
 			</ul>
-			<article class="under-tabs tabcontent" id="blog">
-				<section  class="goodHeight">
-			     <p>All blog posts linked below:</p>
-			  <ul class="blog">
-			  {% for post in site.posts %}
-			    {% if forloop.index <= 5 %}
-			    <li>
-			     <h1><a href="{{post.url | remove_first: "/" }}">{{post.title}}</a></h1>
-			     <h3 class="blog">{{ post.excerpt | strip_html}}</h3>
-			    </li>
-			    {% else %}
-			    <li>
-			     <h2><a href="{{post.url | remove_first: "/" }}">{{post.title}}</a></h2>
-			     <h3 class="blog">{{ post.content | truncatewords: 50 | strip_html}}</h3>
-			    </li>
-			    {% endif%}
-			  {% endfor %}
-			  </ul>
-				</section>
+			<article class="blackInnerDiv under-tabs tabcontent" id="blog">
+				<iframe class="goodHeight" src="blogMain.html" width="100%" style="border:none;"></iframe>
 			</article>
 			<article class="innerDiv under-tabs tabcontent" id="intro">
 				<h1>Realistic Lunar Colony, Coming Online</h1>
