add cover image for social media for index.html
Former-commit-id: fc3c941aa81a3f5176c7d3c4c7e9df2777b6aa57 [formerly 99c58fc138c79f93d2665a6785b47bfe7afb57da]
Former-commit-id: 3166bb10e7b7831ab14ed797591dce3938e8fa4f

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ settlement will affect our future. The technology and science of living
 on the Moon, the challenges and opportunities of low gravity, hard vacuum,
 high radiation, intense sun, large temperature swings, and the substances
 of the Moon."
+image: "img/NewTESS-Stirlings.jpg"
 ---
 
 
