fixed list not reseting
Former-commit-id: f5394fda1eebbdf7a5f66f7ca2ffbad2b810992e [formerly 0525afb11ed12658b7689cddd454533a0ad1ec30]
Former-commit-id: 2b6043004b2c660180c6aaa30752a844c48cf9f3

--- a/tools/teth.html
+++ b/tools/teth.html
@@ -208,6 +208,9 @@ function calc(){
 		};
 		return val;
 	};
+	while(document.getElementById("releases").hasChildNodes()){
+		document.getElementById("releases").removeChild(document.getElementById("releases").lastChild);
+	};
 	for(var i=0;i<targets.length;i++){
 		targets[i].location = findRadiusFromVinf(targets[i].vinf,tether.angularVelocity);
 		var item = document.createElement("p");
